# scrip-cleaner

./: Cargo.toml
src/: main.rs  models.rs  schema.rs
