[package]
name = "scrip-cleaner"
version = "0.1.0"
authors = ["Kai Storbeck <kai@xs4all.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.4.*", features = ["chrono", "postgres"] }
dotenv = "^0.15"
